Fix text overflow for country options

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -254,6 +254,9 @@
   .grid {
     display: grid;
   }
+  .table {
+    display: table;
+  }
   .h-4 {
     height: calc(var(--spacing) * 4);
   }
@@ -280,6 +283,12 @@
   }
   .h-full {
     height: 100%;
+  }
+  .max-h-\[1\.5rem\] {
+    max-height: 1.5rem;
+  }
+  .max-h-\[2rem\] {
+    max-height: 2rem;
   }
   .max-h-\[3rem\] {
     max-height: 3rem;
@@ -341,8 +350,14 @@
   .min-w-\[7rem\] {
     min-width: 7rem;
   }
+  .border-collapse {
+    border-collapse: collapse;
+  }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
+  }
+  .resize {
+    resize: both;
   }
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -407,11 +422,21 @@
   .overflow-y-scroll {
     overflow-y: scroll;
   }
+  .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
+  .bg-slate-100 {
+    background-color: var(--color-slate-100);
+  }
   .bg-slate-100\/60\! {
     background-color: color-mix(in srgb, oklch(96.8% 0.007 247.896) 60%, transparent) !important;
     @supports (color: color-mix(in lab, red, red)) {
       background-color: color-mix(in oklab, var(--color-slate-100) 60%, transparent) !important;
     }
+  }
+  .bg-slate-300 {
+    background-color: var(--color-slate-300);
   }
   .bg-slate-300\/60 {
     background-color: color-mix(in srgb, oklch(86.9% 0.022 252.894) 60%, transparent);
@@ -419,11 +444,17 @@
       background-color: color-mix(in oklab, var(--color-slate-300) 60%, transparent);
     }
   }
+  .bg-slate-500 {
+    background-color: var(--color-slate-500);
+  }
   .bg-slate-500\/10 {
     background-color: color-mix(in srgb, oklch(55.4% 0.046 257.417) 10%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       background-color: color-mix(in oklab, var(--color-slate-500) 10%, transparent);
     }
+  }
+  .bg-transparent {
+    background-color: transparent;
   }
   .bg-transparent\! {
     background-color: transparent !important;
@@ -476,9 +507,6 @@
   .pl-2 {
     padding-left: calc(var(--spacing) * 2);
   }
-  .text-center {
-    text-align: center;
-  }
   .text-start {
     text-align: start;
   }
@@ -506,6 +534,15 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
+  .text-ellipsis {
+    text-overflow: ellipsis;
+  }
+  .whitespace-nowrap {
+    white-space: nowrap;
+  }
+  .text-red-500 {
+    color: var(--color-red-500);
+  }
   .text-red-500\! {
     color: var(--color-red-500) !important;
   }
@@ -526,6 +563,13 @@
   }
   .italic {
     font-style: italic;
+  }
+  .underline {
+    text-decoration-line: underline;
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
   }
   .drop-shadow-md {
     --tw-drop-shadow-size: drop-shadow(0 3px 3px var(--tw-drop-shadow-color, rgb(0 0 0 / 0.12)));
@@ -700,11 +744,6 @@
       }
     }
   }
-  .dark\:text-sky-200 {
-    &:where(.dark, .dark *) {
-      color: var(--color-sky-200);
-    }
-  }
   .dark\:text-sky-400\/60\! {
     &:where(.dark, .dark *) {
       color: color-mix(in srgb, oklch(74.6% 0.16 232.661) 60%, transparent) !important;
@@ -812,9 +851,19 @@ body.light::-webkit-scrollbar-track, .div-scroll--light::-webkit-scrollbar-track
   syntax: "*";
   inherits: false;
 }
+@property --tw-border-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @property --tw-font-weight {
   syntax: "*";
   inherits: false;
+}
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
 }
 @property --tw-blur {
   syntax: "*";
@@ -877,7 +926,9 @@ body.light::-webkit-scrollbar-track, .div-scroll--light::-webkit-scrollbar-track
       --tw-rotate-z: initial;
       --tw-skew-x: initial;
       --tw-skew-y: initial;
+      --tw-border-style: solid;
       --tw-font-weight: initial;
+      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
